--- a/1_Src/2_Embedding/embedding.ipynb
+++ b/1_Src/2_Embedding/embedding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚡ Start - 2024-07-20 21:51:10.971990 ⚡\n",
+      "⚡ Start - 2024-07-20 23:54:39.639693 ⚡\n",
       "\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -75,10 +75,11 @@
     "#DATA_PATH = \"../../0_Data/0_AndroCatSet.csv\"\n",
     "#DATA_PATH = \"../../0_Data/1_AndroCatSetMini.csv\"\n",
     "#DATA_PATH = \"../TmpData/3_MalCatSet_Description.csv\"\n",
+    "#DATA_PATH = \"../TmpData/4_MudFlow_Description.csv\"\n",
     "DATA_PATH = \"../TmpData/5_NewMal_Description.csv\"\n",
     "\n",
     "# Read the data\n",
-    "appsDF = pd.read_csv(DATA_PATH, index_col=0)\n",
+    "appsDF = pd.read_csv(DATA_PATH)\n",
     "#appsDF = appsDF.drop(columns=['googlePlayCategoryID'])\n",
     "\n",
     "# TEST\n",
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -113,38 +114,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>sha256</th>\n",
        "      <th>pkgName</th>\n",
        "      <th>googlePlayDescription</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sha256</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>001E53DDA101AF19670FBD7FB5D348B21641036240895F6985BFE2018073E887</th>\n",
+       "      <th>0</th>\n",
+       "      <td>001E53DDA101AF19670FBD7FB5D348B21641036240895F...</td>\n",
        "      <td>es.aroundpixels.hsk3lite</td>\n",
        "      <td>Don't worry: we know that &lt;b&gt;studying Chinese ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>002557D37607615083739ABEB8D6FDC05CD27EC93C11045E61384DA35EC73D92</th>\n",
+       "      <th>1</th>\n",
+       "      <td>002557D37607615083739ABEB8D6FDC05CD27EC93C1104...</td>\n",
        "      <td>com.onesports.score</td>\n",
        "      <td>AiScore is your LIVESCORE EXPERT. More informa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>00280B2E4FA921E570467396A380FA4248AFA10372B97EB65668923C1087C854</th>\n",
+       "      <th>2</th>\n",
+       "      <td>00280B2E4FA921E570467396A380FA4248AFA10372B97E...</td>\n",
        "      <td>com.perception.soc.en</td>\n",
        "      <td>Play the best classic MMORPG, only in Empire O...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED8CDF364ADFE23FAB6</th>\n",
+       "      <th>3</th>\n",
+       "      <td>0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FE...</td>\n",
        "      <td>im.token.app</td>\n",
        "      <td>imToken is a reliable Web3 digital wallet trus...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EEB1CE7499FBF0E24DE</th>\n",
+       "      <th>4</th>\n",
+       "      <td>009AACC5A4276BE4E16C6E5890784E2A230AF16476D27E...</td>\n",
        "      <td>com.Siyou.HD</td>\n",
        "      <td>Download this application for free to pilot yo...</td>\n",
        "    </tr>\n",
@@ -153,24 +155,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                     pkgName  \\\n",
-       "sha256                                                                         \n",
-       "001E53DDA101AF19670FBD7FB5D348B21641036240895F6...  es.aroundpixels.hsk3lite   \n",
-       "002557D37607615083739ABEB8D6FDC05CD27EC93C11045...       com.onesports.score   \n",
-       "00280B2E4FA921E570467396A380FA4248AFA10372B97EB...     com.perception.soc.en   \n",
-       "0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED...              im.token.app   \n",
-       "009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EE...              com.Siyou.HD   \n",
+       "                                              sha256  \\\n",
+       "0  001E53DDA101AF19670FBD7FB5D348B21641036240895F...   \n",
+       "1  002557D37607615083739ABEB8D6FDC05CD27EC93C1104...   \n",
+       "2  00280B2E4FA921E570467396A380FA4248AFA10372B97E...   \n",
+       "3  0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FE...   \n",
+       "4  009AACC5A4276BE4E16C6E5890784E2A230AF16476D27E...   \n",
        "\n",
-       "                                                                                googlePlayDescription  \n",
-       "sha256                                                                                                 \n",
-       "001E53DDA101AF19670FBD7FB5D348B21641036240895F6...  Don't worry: we know that <b>studying Chinese ...  \n",
-       "002557D37607615083739ABEB8D6FDC05CD27EC93C11045...  AiScore is your LIVESCORE EXPERT. More informa...  \n",
-       "00280B2E4FA921E570467396A380FA4248AFA10372B97EB...  Play the best classic MMORPG, only in Empire O...  \n",
-       "0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED...  imToken is a reliable Web3 digital wallet trus...  \n",
-       "009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EE...  Download this application for free to pilot yo...  "
+       "                    pkgName                              googlePlayDescription  \n",
+       "0  es.aroundpixels.hsk3lite  Don't worry: we know that <b>studying Chinese ...  \n",
+       "1       com.onesports.score  AiScore is your LIVESCORE EXPERT. More informa...  \n",
+       "2     com.perception.soc.en  Play the best classic MMORPG, only in Empire O...  \n",
+       "3              im.token.app  imToken is a reliable Web3 digital wallet trus...  \n",
+       "4              com.Siyou.HD  Download this application for free to pilot yo...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -212,38 +212,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>sha256</th>\n",
        "      <th>pkgName</th>\n",
        "      <th>description</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sha256</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>001E53DDA101AF19670FBD7FB5D348B21641036240895F6985BFE2018073E887</th>\n",
+       "      <th>0</th>\n",
+       "      <td>001E53DDA101AF19670FBD7FB5D348B21641036240895F...</td>\n",
        "      <td>es.aroundpixels.hsk3lite</td>\n",
        "      <td>worry know study chinese complicate bingo teac...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>002557D37607615083739ABEB8D6FDC05CD27EC93C11045E61384DA35EC73D92</th>\n",
+       "      <th>1</th>\n",
+       "      <td>002557D37607615083739ABEB8D6FDC05CD27EC93C1104...</td>\n",
        "      <td>com.onesports.score</td>\n",
        "      <td>expert information statistic completely new ex...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>00280B2E4FA921E570467396A380FA4248AFA10372B97EB65668923C1087C854</th>\n",
+       "      <th>2</th>\n",
+       "      <td>00280B2E4FA921E570467396A380FA4248AFA10372B97E...</td>\n",
        "      <td>com.perception.soc.en</td>\n",
        "      <td>play best classic empire online truly massivel...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED8CDF364ADFE23FAB6</th>\n",
+       "      <th>3</th>\n",
+       "      <td>0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FE...</td>\n",
        "      <td>im.token.app</td>\n",
        "      <td>reliable web digital wallet trust ten million ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EEB1CE7499FBF0E24DE</th>\n",
+       "      <th>4</th>\n",
+       "      <td>009AACC5A4276BE4E16C6E5890784E2A230AF16476D27E...</td>\n",
        "      <td>com.Siyou.HD</td>\n",
        "      <td>download application free pilot r hd drone use...</td>\n",
        "    </tr>\n",
@@ -252,24 +253,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                     pkgName  \\\n",
-       "sha256                                                                         \n",
-       "001E53DDA101AF19670FBD7FB5D348B21641036240895F6...  es.aroundpixels.hsk3lite   \n",
-       "002557D37607615083739ABEB8D6FDC05CD27EC93C11045...       com.onesports.score   \n",
-       "00280B2E4FA921E570467396A380FA4248AFA10372B97EB...     com.perception.soc.en   \n",
-       "0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED...              im.token.app   \n",
-       "009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EE...              com.Siyou.HD   \n",
+       "                                              sha256  \\\n",
+       "0  001E53DDA101AF19670FBD7FB5D348B21641036240895F...   \n",
+       "1  002557D37607615083739ABEB8D6FDC05CD27EC93C1104...   \n",
+       "2  00280B2E4FA921E570467396A380FA4248AFA10372B97E...   \n",
+       "3  0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FE...   \n",
+       "4  009AACC5A4276BE4E16C6E5890784E2A230AF16476D27E...   \n",
        "\n",
-       "                                                                                          description  \n",
-       "sha256                                                                                                 \n",
-       "001E53DDA101AF19670FBD7FB5D348B21641036240895F6...  worry know study chinese complicate bingo teac...  \n",
-       "002557D37607615083739ABEB8D6FDC05CD27EC93C11045...  expert information statistic completely new ex...  \n",
-       "00280B2E4FA921E570467396A380FA4248AFA10372B97EB...  play best classic empire online truly massivel...  \n",
-       "0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED...  reliable web digital wallet trust ten million ...  \n",
-       "009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EE...  download application free pilot r hd drone use...  "
+       "                    pkgName                                        description  \n",
+       "0  es.aroundpixels.hsk3lite  worry know study chinese complicate bingo teac...  \n",
+       "1       com.onesports.score  expert information statistic completely new ex...  \n",
+       "2     com.perception.soc.en  play best classic empire online truly massivel...  \n",
+       "3              im.token.app  reliable web digital wallet trust ten million ...  \n",
+       "4              com.Siyou.HD  download application free pilot r hd drone use...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -330,44 +329,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>sha256</th>\n",
        "      <th>pkgName</th>\n",
        "      <th>description</th>\n",
        "      <th>embedding</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sha256</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>001E53DDA101AF19670FBD7FB5D348B21641036240895F6985BFE2018073E887</th>\n",
+       "      <th>0</th>\n",
+       "      <td>001E53DDA101AF19670FBD7FB5D348B21641036240895F...</td>\n",
        "      <td>es.aroundpixels.hsk3lite</td>\n",
        "      <td>worry know study chinese complicate bingo teac...</td>\n",
        "      <td>[0.005222779233008623, -0.01788198947906494, -...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>002557D37607615083739ABEB8D6FDC05CD27EC93C11045E61384DA35EC73D92</th>\n",
+       "      <th>1</th>\n",
+       "      <td>002557D37607615083739ABEB8D6FDC05CD27EC93C1104...</td>\n",
        "      <td>com.onesports.score</td>\n",
        "      <td>expert information statistic completely new ex...</td>\n",
        "      <td>[-0.01127683650702238, 0.0010928395204246044, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>00280B2E4FA921E570467396A380FA4248AFA10372B97EB65668923C1087C854</th>\n",
+       "      <th>2</th>\n",
+       "      <td>00280B2E4FA921E570467396A380FA4248AFA10372B97E...</td>\n",
        "      <td>com.perception.soc.en</td>\n",
        "      <td>play best classic empire online truly massivel...</td>\n",
        "      <td>[0.02538859285414219, 0.04251297935843468, 0.0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED8CDF364ADFE23FAB6</th>\n",
+       "      <th>3</th>\n",
+       "      <td>0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FE...</td>\n",
        "      <td>im.token.app</td>\n",
        "      <td>reliable web digital wallet trust ten million ...</td>\n",
        "      <td>[0.012788532301783562, 0.004980458877980709, -...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EEB1CE7499FBF0E24DE</th>\n",
+       "      <th>4</th>\n",
+       "      <td>009AACC5A4276BE4E16C6E5890784E2A230AF16476D27E...</td>\n",
        "      <td>com.Siyou.HD</td>\n",
        "      <td>download application free pilot r hd drone use...</td>\n",
        "      <td>[0.012929912656545639, 0.030403099954128265, -...</td>\n",
@@ -377,32 +376,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                     pkgName  \\\n",
-       "sha256                                                                         \n",
-       "001E53DDA101AF19670FBD7FB5D348B21641036240895F6...  es.aroundpixels.hsk3lite   \n",
-       "002557D37607615083739ABEB8D6FDC05CD27EC93C11045...       com.onesports.score   \n",
-       "00280B2E4FA921E570467396A380FA4248AFA10372B97EB...     com.perception.soc.en   \n",
-       "0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED...              im.token.app   \n",
-       "009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EE...              com.Siyou.HD   \n",
+       "                                              sha256  \\\n",
+       "0  001E53DDA101AF19670FBD7FB5D348B21641036240895F...   \n",
+       "1  002557D37607615083739ABEB8D6FDC05CD27EC93C1104...   \n",
+       "2  00280B2E4FA921E570467396A380FA4248AFA10372B97E...   \n",
+       "3  0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FE...   \n",
+       "4  009AACC5A4276BE4E16C6E5890784E2A230AF16476D27E...   \n",
        "\n",
-       "                                                                                          description  \\\n",
-       "sha256                                                                                                  \n",
-       "001E53DDA101AF19670FBD7FB5D348B21641036240895F6...  worry know study chinese complicate bingo teac...   \n",
-       "002557D37607615083739ABEB8D6FDC05CD27EC93C11045...  expert information statistic completely new ex...   \n",
-       "00280B2E4FA921E570467396A380FA4248AFA10372B97EB...  play best classic empire online truly massivel...   \n",
-       "0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED...  reliable web digital wallet trust ten million ...   \n",
-       "009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EE...  download application free pilot r hd drone use...   \n",
+       "                    pkgName  \\\n",
+       "0  es.aroundpixels.hsk3lite   \n",
+       "1       com.onesports.score   \n",
+       "2     com.perception.soc.en   \n",
+       "3              im.token.app   \n",
+       "4              com.Siyou.HD   \n",
        "\n",
-       "                                                                                            embedding  \n",
-       "sha256                                                                                                 \n",
-       "001E53DDA101AF19670FBD7FB5D348B21641036240895F6...  [0.005222779233008623, -0.01788198947906494, -...  \n",
-       "002557D37607615083739ABEB8D6FDC05CD27EC93C11045...  [-0.01127683650702238, 0.0010928395204246044, ...  \n",
-       "00280B2E4FA921E570467396A380FA4248AFA10372B97EB...  [0.02538859285414219, 0.04251297935843468, 0.0...  \n",
-       "0046DD085DDCA00DD6804614539CC9071BC6A4C541A8FED...  [0.012788532301783562, 0.004980458877980709, -...  \n",
-       "009AACC5A4276BE4E16C6E5890784E2A230AF16476D27EE...  [0.012929912656545639, 0.030403099954128265, -...  "
+       "                                         description  \\\n",
+       "0  worry know study chinese complicate bingo teac...   \n",
+       "1  expert information statistic completely new ex...   \n",
+       "2  play best classic empire online truly massivel...   \n",
+       "3  reliable web digital wallet trust ten million ...   \n",
+       "4  download application free pilot r hd drone use...   \n",
+       "\n",
+       "                                           embedding  \n",
+       "0  [0.005222779233008623, -0.01788198947906494, -...  \n",
+       "1  [-0.01127683650702238, 0.0010928395204246044, ...  \n",
+       "2  [0.02538859285414219, 0.04251297935843468, 0.0...  \n",
+       "3  [0.012788532301783562, 0.004980458877980709, -...  \n",
+       "4  [0.012929912656545639, 0.030403099954128265, -...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,6 +434,9 @@
     "\n",
     "# MalCatSet\n",
     "#appsDF.to_csv(\"../TmpData/3_MalCatSet_Embeddings.csv\", index=False)\n",
+    "\n",
+    "# MalCatSet\n",
+    "#appsDF.to_csv(\"../TmpData/4_MudFlow_Embeddings.csv\", index=False)\n",
     "\n",
     "# MalCatSet\n",
     "appsDF.to_csv(\"../TmpData/5_NewMal_Embeddings.csv\", index=False)"
@@ -445,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -453,8 +459,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔚 --- End - 2024-07-20 21:55:58.381243 --- 🔚\n",
-      "⏱️ --- Time: 04 minutes and 47 seconds --- ⏱️\n"
+      "🔚 --- End - 2024-07-20 23:59:20.968402 --- 🔚\n",
+      "⏱️ --- Time: 04 minutes and 41 seconds --- ⏱️\n"
      ]
     }
    ],
