--- a/1_Src/1_DescriptionCrawler/descriptionCrawlerOffline.ipynb
+++ b/1_Src/1_DescriptionCrawler/descriptionCrawlerOffline.ipynb
@@ -9,16 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import numpy    as np\n",
     "import pandas   as pd\n",
-    "import google_play_scraper \n",
-    "import langdetect\n",
     "import datetime\n",
+    "import tempfile\n",
     "import subprocess\n",
     "import requests\n",
     "import time\n",
@@ -36,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚡ Start - 2024-07-23 14:40:57.121651 ⚡\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"⚡ Start - {} ⚡\\n\".format(datetime.datetime.now()))\n",
     "startTime = datetime.datetime.now()"
@@ -62,20 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📄 Size of az16DF      : (15342, 2)\n",
-      "📄 Size of mudflowDF   : (8038, 2)\n",
-      "📄 Size of maliciousDF : (23380, 2)\n",
-      "📄 Size of maliciousDF : (23380, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the dataframes\n",
     "az16DF = pd.read_csv(\"../../0_Data/azFiltered16.csv\")\n",
@@ -102,7 +81,7 @@
     "print(f\"📄 Size of maliciousDF : {maliciousDF.shape}\")\n",
     "\n",
     "# Display the first 2 rows of the resulting dataframe\n",
-    "maliciousDF = maliciousDF.head(2)"
+    "maliciousDF.head(2)"
    ]
   },
   {
@@ -114,88 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AZ_PATH = \"../../0_Data/gp-metadata-full.jsonl.gz\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pkgNamesList = maliciousDF[\"pkgName\"].to_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['com.kuyhaa.android.auto.call.recorder.acr.lite.autocallrecorder.voicecallrecorder.tools', 'com.greenncardd.senegalgospelmusic']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pkgNamesList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m gzip_process\u001b[38;5;241m.\u001b[39mstdout\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Get the output and any errors from jq\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m output, error \u001b[38;5;241m=\u001b[39m \u001b[43mjq_process\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommunicate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m jq_process\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     26\u001b[0m     data \u001b[38;5;241m=\u001b[39m output\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/marcoEnv/lib/python3.9/subprocess.py:1134\u001b[0m, in \u001b[0;36mPopen.communicate\u001b[0;34m(self, input, timeout)\u001b[0m\n\u001b[1;32m   1131\u001b[0m     endtime \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1133\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1134\u001b[0m     stdout, stderr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_communicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mendtime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1135\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1136\u001b[0m     \u001b[38;5;66;03m# https://bugs.python.org/issue25942\u001b[39;00m\n\u001b[1;32m   1137\u001b[0m     \u001b[38;5;66;03m# See the detailed comment in .wait().\u001b[39;00m\n\u001b[1;32m   1138\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/miniconda3/envs/marcoEnv/lib/python3.9/subprocess.py:1995\u001b[0m, in \u001b[0;36mPopen._communicate\u001b[0;34m(self, input, endtime, orig_timeout)\u001b[0m\n\u001b[1;32m   1988\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_timeout(endtime, orig_timeout,\n\u001b[1;32m   1989\u001b[0m                         stdout, stderr,\n\u001b[1;32m   1990\u001b[0m                         skip_check_and_raise\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m   1991\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(  \u001b[38;5;66;03m# Impossible :)\u001b[39;00m\n\u001b[1;32m   1992\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_check_timeout(..., skip_check_and_raise=True) \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m   1993\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfailed to raise TimeoutExpired.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m-> 1995\u001b[0m ready \u001b[38;5;241m=\u001b[39m \u001b[43mselector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1996\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_timeout(endtime, orig_timeout, stdout, stderr)\n\u001b[1;32m   1998\u001b[0m \u001b[38;5;66;03m# XXX Rewrite these to use non-blocking I/O on the file\u001b[39;00m\n\u001b[1;32m   1999\u001b[0m \u001b[38;5;66;03m# objects; they are no longer using C stdio!\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/marcoEnv/lib/python3.9/selectors.py:416\u001b[0m, in \u001b[0;36m_PollLikeSelector.select\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    414\u001b[0m ready \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    415\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 416\u001b[0m     fd_event_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_selector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpoll\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    417\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mInterruptedError\u001b[39;00m:\n\u001b[1;32m    418\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ready\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "# Decompress the gzipped file and pipe the output to jq\n",
-    "gzip_process = subprocess.Popen(\n",
-    "    [\"gzip\", \"-cd\", AZ_PATH],\n",
-    "    stdout=subprocess.PIPE,\n",
-    "    stderr=subprocess.PIPE\n",
-    ")\n",
-    "\n",
-    "jq_process = subprocess.Popen(\n",
-    "    [\"jq\",\n",
-    "     \"--argjson\",\n",
-    "     \"pkgNames\",\n",
-    "     json.dumps(pkgNamesList),\n",
-    "     'select(any(.docid == $pkgNames[]; .)) | .docid + \",\" + .descriptionHtml'],\n",
-    "    stdin=gzip_process.stdout,\n",
-    "    stdout=subprocess.PIPE,\n",
-    "    stderr=subprocess.PIPE\n",
-    ")\n",
-    "\n",
-    "# Ensure the gzip process doesn't receive any further input\n",
-    "gzip_process.stdout.close()\n",
-    "\n",
-    "# Get the output and any errors from jq\n",
-    "output, error = jq_process.communicate()\n",
-    "\n",
-    "if jq_process.returncode == 0:\n",
-    "    data = output.decode(\"utf-8\").replace(\"\\\"\", \"\")\n",
-    "else:\n",
-    "    print(f\"Error: {error.decode('utf-8')}\")"
+    "# Define file paths\n",
+    "AZ_PATH = \"../../0_Data/gp-metadata-full.jsonl\"\n",
+    "OUTPUT_CSV_PATH = \"descriptions.csv\""
    ]
   },
   {
@@ -204,7 +108,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data)"
+    "pkgNamesList = maliciousDF[\"pkgName\"].to_list()\n",
+    "print(len(pkgNamesList))\n",
+    "\n",
+    "pkgNamesList = list(set(pkgNamesList))\n",
+    "print(len(pkgNamesList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a temporary file to hold the JSON data\n",
+    "with tempfile.NamedTemporaryFile(delete=False, mode='w', encoding='utf-8') as temp_file:\n",
+    "    json.dump(pkgNamesList, temp_file)\n",
+    "    temp_file_path = temp_file.name\n",
+    "\n",
+    "# Run jq command and capture the output\n",
+    "try:\n",
+    "    byteResult = subprocess.check_output([\n",
+    "        \"jq\",\n",
+    "        '--argfile', 'pkgNames', temp_file_path,\n",
+    "        'select(any(.docid == $pkgNames[]; .)) | .docid + \",\" + .descriptionHtml',\n",
+    "        AZ_PATH\n",
+    "    ])\n",
+    "except subprocess.CalledProcessError as e:\n",
+    "    print(f\"Error running jq: {e}\")\n",
+    "    raise\n",
+    "finally:\n",
+    "    # Clean up temporary file\n",
+    "    os.remove(temp_file_path)\n",
+    "\n",
+    "data = byteResult.decode(\"utf-8\").replace(\"\\\"\", \"\")\n",
+    "\n",
+    "# Split data into rows\n",
+    "rows = data.split('\\n')\n",
+    "\n",
+    "# Prepare lists to hold the data\n",
+    "pkgNames = []\n",
+    "descriptions = []\n",
+    "\n",
+    "# Process each row to extract pkgName and description\n",
+    "for row in rows:\n",
+    "    if row:\n",
+    "        pkgName, description = row.split(',', 1)  # Split only on the first comma\n",
+    "        pkgNames.append(pkgName)\n",
+    "        descriptions.append(description)\n",
+    "\n",
+    "# Create a DataFrame from the lists\n",
+    "result_df = pd.DataFrame({\n",
+    "    'pkgName': pkgNames,\n",
+    "    'descriptionHtml': descriptions\n",
+    "})\n",
+    "\n",
+    "result_df.to_csv(OUTPUT_CSV_PATH, index=False)\n",
+    "print(f\"DataFrame saved to {OUTPUT_CSV_PATH}\")"
    ]
   },
   {
@@ -247,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
