UPDATE: new file with alld escription and previous class

--- a/1_Src/0_Combine/createFile.ipynb
+++ b/1_Src/0_Combine/createFile.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚡ Start - 2024-07-25 17:26:26.609796 ⚡\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"⚡ Start - {} ⚡\\n\".format(datetime.datetime.now()))\n",
     "startTime = datetime.datetime.now()"
@@ -54,53 +45,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Size before dropping duplicates: (5761, 2)\n",
-      "Size after dropping duplicates: (2784, 2)\n",
-      "Size after removing non-English descriptions: (2226, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from langdetect import detect, DetectorFactory\n",
+    "# import pandas as pd\n",
+    "# from langdetect import detect, DetectorFactory\n",
     "\n",
-    "# To ensure reproducibility of language detection\n",
-    "DetectorFactory.seed = 0\n",
+    "# # To ensure reproducibility of language detection\n",
+    "# DetectorFactory.seed = 0\n",
     "\n",
-    "# Load the data from a CSV file\n",
-    "df = pd.read_csv('allDescriptions.csv')\n",
+    "# # Load the data from a CSV file\n",
+    "# df = pd.read_csv('allDescriptions.csv')\n",
     "\n",
-    "# Print the size before dropping duplicates\n",
-    "print(f\"Size before dropping duplicates: {df.shape}\")\n",
+    "# # Print the size before dropping duplicates\n",
+    "# print(f\"Size before dropping duplicates: {df.shape}\")\n",
     "\n",
-    "# Drop duplicates based on the 'pkgName' column\n",
-    "df_dedup = df.drop_duplicates(subset='pkgName')\n",
+    "# # Drop duplicates based on the 'pkgName' column\n",
+    "# df_dedup = df.drop_duplicates(subset='pkgName')\n",
     "\n",
-    "# Print the size after dropping duplicates\n",
-    "print(f\"Size after dropping duplicates: {df_dedup.shape}\")\n",
+    "# # Print the size after dropping duplicates\n",
+    "# print(f\"Size after dropping duplicates: {df_dedup.shape}\")\n",
     "\n",
-    "# Function to check if a description is in English\n",
-    "def is_english(text):\n",
-    "    try:\n",
-    "        return detect(text) == 'en'\n",
-    "    except:\n",
-    "        return False\n",
+    "# # Function to check if a description is in English\n",
+    "# def is_english(text):\n",
+    "#     try:\n",
+    "#         return detect(text) == 'en'\n",
+    "#     except:\n",
+    "#         return False\n",
     "\n",
-    "# Apply the function to filter out non-English descriptions\n",
-    "df_filtered = df_dedup[df_dedup['description'].apply(is_english)]\n",
+    "# # Apply the function to filter out non-English descriptions\n",
+    "# df_filtered = df_dedup[df_dedup['description'].apply(is_english)]\n",
     "\n",
-    "# Print the size after removing non-English descriptions\n",
-    "print(f\"Size after removing non-English descriptions: {df_filtered.shape}\")\n",
+    "# # Print the size after removing non-English descriptions\n",
+    "# print(f\"Size after removing non-English descriptions: {df_filtered.shape}\")\n",
     "\n",
-    "# Save the cleaned DataFrame to a new CSV file\n",
-    "df_filtered.to_csv('cleaned_file.csv', index=False)"
+    "# # Save the cleaned DataFrame to a new CSV file\n",
+    "# df_filtered.to_csv('cleaned_file.csv', index=False)"
    ]
   },
   {
@@ -118,14 +99,44 @@
    "source": [
     "# Load the dataframes\n",
     "az16DF = pd.read_csv(\"../../0_Data/azFiltered16.csv\")\n",
-    "mudflowDF = pd.read_csv(\"../../0_Data/4_MudFlow.csv\")\n",
-    "\n",
     "# Select and rename columns\n",
     "az16DF = az16DF[['sha256', 'pkg_name']]\n",
     "az16DF.rename(columns={'pkg_name': 'pkgName'}, inplace=True)\n",
     "\n",
-    "mudflowDF = mudflowDF[['sha256', 'pkgName']]\n",
+    "# Add new columns with specified values\n",
+    "az16DF['source'] = 'AZ'\n",
+    "az16DF['BenjaminClass'] = np.nan\n",
     "\n",
+    "az16DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the data from the CSV file\n",
+    "mudflowDF = pd.read_csv(\"../../0_Data/4_MudFlow.csv\")\n",
+    "\n",
+    "# Select the necessary columns\n",
+    "mudflowDF = mudflowDF[['sha256', 'pkgName', 'classID']]\n",
+    "\n",
+    "# Rename 'classID' to 'BenjaminClass'\n",
+    "mudflowDF.rename(columns={'classID': 'BenjaminClass'}, inplace=True)\n",
+    "\n",
+    "# Add a new column 'Source' with the value 'MUDFLOW'\n",
+    "mudflowDF['source'] = 'MUDFLOW'\n",
+    "\n",
+    "mudflowDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Concatenate the dataframes\n",
     "maliciousDF = pd.concat([az16DF, mudflowDF], axis=0)\n",
     "\n",
@@ -140,8 +151,42 @@
     "# Print size of maliciousDF after removing duplicates\n",
     "print(f\"📄 Size of maliciousDF : {maliciousDF.shape}\")\n",
     "\n",
-    "# Display the first 2 rows of the resulting dataframe\n",
-    "maliciousDF.head(2)"
+    "maliciousDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desDF = pd.read_csv(\"../../0_Data/allDescriptionsCleaned.csv\")\n",
+    "desDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maldesDF = pd.merge(maliciousDF, desDF, on='pkgName', how='inner')\n",
+    "\n",
+    "# Drop rows where 'description' column is NaN or empty\n",
+    "maldesDF = maldesDF[maldesDF['description'].notna() & (maldesDF['description'] != '')]\n",
+    "\n",
+    "maldesDF = maldesDF.drop_duplicates(subset='sha256')\n",
+    "\n",
+    "maldesDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maldesDF.to_csv(\"5_NewMalCatSet.csv\", index=False)"
    ]
   },
   {
